# tiny_packer

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
gui/: index.html  package.json  pnpm-lock.yaml
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src-tauri/src/commands/: mod.rs
gui/src/components/: atlas-output.tsx  atlas-preview.tsx  image-sources.tsx  settings-sidebar.tsx
gui/src/store/: store.ts
shared/: Cargo.toml
shared/src/: lib.rs
